Changed layout issues in Working with us section

--- a/public/sass/partials/_working_with_us.scss
+++ b/public/sass/partials/_working_with_us.scss
@@ -1,7 +1,6 @@
 .working_with_us {
   font-family: 'IBM Plex Sans', sans-serif;
   .top_section {
-    height: 90vh;
     background: url('/images/photos/wrkng-with-us.jpg') center center;
     background-size: cover;
     .top_text {
@@ -23,7 +22,7 @@
   }
   .form_section {
     display: flex;
-    background-color: #DB6136;
+    background-color: #DC6136;
     padding: 6em 8em;
     font-family: BebasNeue, Helvetica, Arial, sans-serif;
     .hero_text {
@@ -142,7 +141,7 @@
       p {
         width: auto;
         height: auto;
-        margin: 7em 0;
+        margin: 5em 0;
       }
     }
     .form_section {
@@ -171,10 +170,11 @@
 
 @media screen and (max-width: 500px) {
   .working_with_us {
-    .top_text {
+    .top_section .top_text {
       p {
-        font-size: 1em;
-        margin: 2em 0;
+        font-size: 1.3em;
+        line-height: 1.2;
+        margin: 1em 0;
       }
     }
     .form_section {
